Fri Jan 10 01:23:45 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* misc/ruby-mode.el (ruby-font-lock-syntactic-keywords): syntax
	  classes are not allowed inside character classes.
	  [ruby-talk:60996]

Thu Jan  9 23:28:01 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* configure.in: AC_MSG_FAILURE is a new macro in 2.54b or later.

Thu Jan  9 18:31:45 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* io.c (io_write, rb_io_putc): set FMODE_WBUF flag unless flushed.

Thu Jan  9 17:30:55 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* file.c (rb_find_file_ext): sync with Ruby 1.8. ([ruby-talk:56407])

Thu Jan 09 17:05:14 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* configure.in (RUBY_CHECK_IO_NEED): check whether fseek() and
	  fflush() are needed.

	* io.c (flush_before_seek): flush before seek if buffered data
	  may remain.

	* io.c (rb_io_check_readable): seek if the last operation was
	  write.

	* io.c (rb_io_check_writable): seek if the last operation was
	  read.

	* rubyio.h (FMODE_RBUF, FMODE_WBUF): added.

Mon Jan  6 02:32:46 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* struct.c (make_struct): needs meta class.

Sun Jan  5 09:36:46 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* ruby.c (ruby_init_loadpath): under Windows, get the module
	  path from an internal address instead of hard coded library
	  name.

	* cygwin/GNUmakefile.in, win32/Makefile.sub (CPPFLAGS):
	  removed LIBRUBY_SO macro.

Sun Jan  5 03:51:57 2003  Akinori MUSHA  <knu@iDaemons.org>

	* defines.h (FLUSH_REGISTER_WINDOWS): Make the flushw call an
	  inline function so it can be used as an expression.

	* eval.c (EXEC_TAG, THREAD_SAVE_CONTEXT): Consistently call
	  FLUSH_REGISTER_WINDOWS before calling setjmp(). (I suspect that
	  every setjmp() implementation should take care of register
	  windows, though)

Wed Jan  1 15:44:55 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/dbm/extconf.rb (-DDBM_HDR): substitute ' with " to avoid